# VulkanBaseplate

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VCK.h  VCKCrossplatform.cpp  VCKCrossplatform.h  VCKExpansion.cpp  VCKExpansion.h  VmaImpl.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanModule.h  VulkanModuleExpansion.cpp  VulkanModuleExpansion.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h
.github/workflows/: build.yml
VMM/: VulkanMemoryManager.cpp  VulkanMemoryManager.h
core/: VCKWindow.h  VmaImpl.cpp  VulkanContext.cpp  VulkanContext.h  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.h
docs/: Build.md  Cookbook.md  Core-API.md  Design.md  Examples.md  Execution-Layer.md  Expansion-API.md  Home.md  Overview.md  VMM.md
example/: App.cpp  App.h  CMakeLists.txt  build.bat  build.sh  main.cpp
example/AAShowcaseExample/: App.cpp  App.h  main.cpp
example/DebugShowcaseExample/: App.cpp  App.h  main.cpp
example/DebugTimelineExample/: App.cpp  App.h  main.cpp
example/DebugTimelineExample/assets/: DebugTimelineExample.frag
example/EasyCubeExample/: App.cpp  App.h  main.cpp
example/EasyCubeExample/assets/: easycube.frag  easycube.vert
example/HelloExample/: App.cpp  App.h  main.cpp
example/HelloExample/assets/: hello.vert
example/JobGraphExample/: App.cpp  App.h  main.cpp
example/MipmapExample/: App.cpp  App.h  main.cpp
example/MipmapExample/assets/: compile.bat  mip.frag  mip.frag.spv  mip.vert  mip.vert.spv
example/RGBTriangle/: App.cpp  App.h  main.cpp
example/RGBTriangle/assets/: triangle.frag  triangle.vert  triangle.vert.spv
example/SchedulerPolicyExample/: App.cpp  App.h  main.cpp
example/SecondaryCmdExample/: App.cpp  App.h  main.cpp
example/SecondaryCmdExample/assets/: secondary.frag  secondary.vert
example/ShaderToolingExample/: App.cpp  App.h  ShaderToolingExample  main.cpp
example/ShaderToolingExample/assets/: shadertool.frag  shadertool.vert
example/SubmissionBatchingExample/: App.cpp  App.h  main.cpp
example/TimelineExample/: App.cpp  App.h  main.cpp
example/TimelineExample/assets/: TimelineExample.vert
example/VMMExample/: App.cpp  App.h  main.cpp
example/VMMExample/assets/: vmm.frag  vmm.frag.spv  vmm.vert  vmm.vert.spv
layers/core/: VCKCrossplatform.cpp  VCKMath.h  VmaImpl.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h
layers/execution/: VCKExecution.cpp  VCKExecution.h
layers/expansion/: VCKExpansion.cpp  VCKExpansion.h
layers/vmm/: VulkanMemoryManager.cpp  VulkanMemoryManager.h
tests/: test_legacy_logvk.cpp  test_log_dedup.cpp  test_log_emit.cpp  test_main.cpp  test_r11_r12_reliability.cpp  test_r14_reliability.cpp  test_r19_r15_r16_cost_scope.cpp  test_r1_r6_r10_r24_explicitness.cpp  test_r23_r24_transparency.cpp  test_vckmath.cpp  test_vk_check.cpp  vck_log_capture.h  vck_test.h
